tests/errors/arguments/types/invalid_type_04.src
.IPPcode18
read GF@var invalid